--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td><img src="ionela.png" alt="Photos de Ionela"></td>
-      <td>  <h1>Ionela Nedehtlea</h1>
+      <td>  <h1>Ionela Nedelea</h1>
 
         <p><em>Auxiliaire de <strong><a href="https://fr.wikipedia.org/wiki/Pu%C3%A9riculture">puericulture</a></strong></em></p>
         <p>Je suis auxiliaire de puericulture dans un multi-accueil. J'aime travailler aupres des enfants.</p></td>
@@ -66,7 +66,7 @@
           <td>⭐⭐⭐⭐</td>
         </tr>
       </table>
-    
+
 <hr>
   <a href="loisirs.html">Mes Loisirs</a>
 <br />
